# scoremydatacenter

./: .gitignore  AUTHORS  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/datacenters/: README.md  zz-test-alpha.json  zz-test-beta.json
data/methodology/: CHANGELOG.md  README.md  v0.1.0-draft.json
data/schema/: README.md  datacenter.schema.json  methodology.schema.json  watchlist.schema.json
data/watchlist/: zz-test-watchlist.json
docs/: DEPLOY.md  SECURITY.md  methodologie-notation.md
engine/: __init__.py  artifacts.py  core.py  indices.py  normalize.py  score.py  scoring.py  showcase.py  stats.py  validate.py
engine/tests/: calibration_anchors.json  conftest.py  retrospective_cases.json  test_calibration_anchors.py  test_content_coherence.py  test_ethical_constraints.py  test_gates.py  test_golden.py  test_i18n_parity.py  test_indices.py  test_indices_surfaces.py  test_media_sat.py  test_normalize.py  test_not_collected.py  test_one_way_to_run.py  test_orchestrate.py  test_pipeline_dcwatch.py  test_pipeline_press.py  test_pipeline_review.py  test_pipeline_seed_dcwatch.py  test_pipeline_signal.py  test_pipeline_spatial.py  test_pipeline_spatial_be.py  test_pipeline_spatial_eu.py  test_public_data_floor.py  test_retrospective.py  test_scaffold.py  test_scoring.py  (+5 more)
pipelines/: README.md  WORKFLOW.md  llm_client.py  orchestrate.py  synthesize.py
scripts/: build_prod_artifacts.py  check_headers.py  gen_methodology_doc.py  migrate_l2_prudence.py  score_corpus.py
site/: astro.config.mjs  package-lock.json  package.json
(+152 files in other folders)
